--- a/horde-extras/build.gradle
+++ b/horde-extras/build.gradle
@@ -1,5 +1,17 @@
 archivesBaseName = "horde-extras"
 
-repositories {}
+repositories {
+    maven {
+        name "Siphalor's Maven"
+        url "https://maven.siphalor.de"
+    }
+    // For some testing dependencies of Nbt Crafting
+    maven {
+        name "Jitpack"
+        url "https://jitpack.io"
+    }
+}
 
-dependencies {}
+dependencies {
+    //modImplementation "de.siphalor:nbtcrafting-2.1.3+mc1.18.2"
+}
