Goggle fooling around

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,8 @@ pluginManagement {
 
 rootProject.name = "shales_horde"
 
-include 'horde-backpack'
+//include 'horde-backpack'
 //include 'horde-main'
-include 'horde-resource-crops'
+//include 'horde-resource-crops'
 include 'horde-origins'
 
