--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ rootProject.name = "shales_horde"
 
 //include 'horde-backpack'
 //include 'horde-main'
-//include 'horde-resource-crops'
-include 'horde-extras'
+include 'horde-resource-crops'
+//include 'horde-extras'
