--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,6 @@ pluginManagement {
 
 rootProject.name = "shales_horde"
 
-include 'horde-backpack'
+//include 'horde-backpack'
 //include 'horde-main'
 include 'horde-resource-crops'
