--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ rootProject.name = "shales_horde"
 //include 'horde-backpack'
 //include 'horde-main'
 //include 'horde-resource-crops'
-include 'horde-extras'
+//include 'horde-extras'
+include 'horde-armoury'
