--- a/horde-armoury/build.gradle
+++ b/horde-armoury/build.gradle
@@ -5,13 +5,28 @@ repositories {
         name "Siphalor's Maven"
         url "https://maven.siphalor.de"
     }
+    maven { url "https://maven.shedaniel.me/" }
     // For some testing dependencies of Nbt Crafting
     maven {
         name "Jitpack"
         url "https://jitpack.io"
     }
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = "TerraformersMC"
+                url = uri("https://maven.terraformersmc.com/")
+            }
+        }
+        filter {
+            includeGroup("com.terraformersmc")
+        }
+    }
 }
 
 dependencies {
-    //modImplementation "de.siphalor:nbtcrafting-2.1.3+mc1.18.2"
+    modImplementation "com.github.CrimsonDawn45:Fabric-Shield-Lib:v${project.fabric_shield_lib_version}"
+    modApi("me.shedaniel.cloth:cloth-config-fabric:6.2.62") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 }
