copper smelts more iron smelts more gold smelts diamond smelts netherite smelts diamond nugget added copper nugget added bell recipe added all tier horse armour recipe added netherite horse armour added

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ rootProject.name = "shales_horde"
 
 //include 'horde-backpack'
 //include 'horde-main'
-include 'horde-resource-crops'
+//include 'horde-resource-crops'
 include 'horde-extras'
