--- a/horde-resource-crops/build.gradle
+++ b/horde-resource-crops/build.gradle
@@ -1,5 +1,5 @@
 archivesBaseName = "horde-resource-crops"
 
-repositories {}
+repositories {maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }}
 
-dependencies {}
+dependencies {modImplementation 'software.bernie.geckolib:geckolib-fabric-1.18:3.0.51'}
